--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "npm run build-db && npm run build && npx gh-pages -d build -t true"
   },
   "devDependencies": {
+    "@poppanator/sveltekit-svg": "^3.0.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.15.7",
