--- a/data/cars/renault_trafic2.yaml
+++ b/data/cars/renault_trafic2.yaml
@@ -29,7 +29,7 @@ height : 1962
 length : 4782
 dragArea : 3.5
 dragCoef : 0.36
-wheelBase : 3090
+wheelbase : 3090
 trunk : 3200
 seats: 3
 
@@ -49,7 +49,7 @@ trims :
     length : 5180
     height : 2460
     dragArea : 4.67
-    wheelBase : 3500
+    wheelbase : 3500
     trunk : 8360
     model : renaultTraficL2H2
 
