--- a/data/cars/mazda_323.yaml
+++ b/data/cars/mazda_323.yaml
@@ -29,7 +29,7 @@ engines :
       torqueX: [1000,2000,4500]
       features : SOHC, intercooler
   - engine :
-      name : 1.4 70
+      name : 1.3 70
       hp : 72
       torqueY: [90, 108, 92, 82] #108nm@4000 72hp@5500
       torqueX: [1000,4000, 5500, 6000]
@@ -41,6 +41,20 @@ engines :
     avgConsumption : 7.4
     gearRatio : [3.416,1.842,1.290,0.972,0.775] # approx
     driveRatio : 4.4 #approx
+  - engine :
+      name : 1.6
+      hp : 106
+      torqueY: [100 , 145 , 135 , 120 ] #145nm @4000 78kw@5500
+      torqueX: [1000, 4000, 5500, 6000]
+      type: petrol
+      displacement: 1598
+    weight : 1119
+    gearName : auto
+    gearRatio : [2.826, 1.497, 1, 0.725]
+    gearReverse : 2.640
+    driveRatio : 4.147
+    acc0100 : 12.8
+    vmax : 180
 
 # -------------
 # TRANSMISSION
