--- a/data/cars/citroen_2cv.yaml
+++ b/data/cars/citroen_2cv.yaml
@@ -1,5 +1,5 @@
 name : 2cv
-brand : citroen
+brand : Citroen
 year : 1953
 price: 5000fr
 unitsProduced : 5,114,961 # peak 232.551 en 1964 remplacé progressivement par Dyane
