--- a/data/cars/dacia_logan.yaml
+++ b/data/cars/dacia_logan.yaml
@@ -1,12 +1,12 @@
-name : logan mcv
-brand : dacia
+name : Logan mcv
+brand : Dacia
 trim : logan mcv 70hp
 year : 2006
 
 # -------------
 # ENGINE
 # -------------
-engine : 
+engine :
   name : 1.5 dci 70 k9k
   hp: 67
   torqueY: [95.2, 154.7, 160 , 159.3, 155.1, 147, 135.1, 119.4, 99.3] # 160nm @1700 67hp @4000
@@ -50,7 +50,7 @@ wheelType : 185/65/15
 # -------------
 # TRIMS
 # -------------
-trims : 
+trims :
   - trim :
 
 # -------------
