--- a/data/cars/nissan_micra.yaml
+++ b/data/cars/nissan_micra.yaml
@@ -1,12 +1,12 @@
-name : micra
-brand : nissan
-trim : 80 
+name : Micra
+brand : Nissan
+trim : 80
 year : 2013
 
 # -------------
 # ENGINE
 # -------------
-engine :  
+engine :
   name : HR12DE
   hp: 80
   torqueY: [51.8, 77.7, 90.6, 103.5, 110.1, 109.1, 106.1, 100.9, 93.6, 78  ]
@@ -47,11 +47,11 @@ acc0100: 13.7
 vmax: 170
 turningCircle : 9.3
 energyTank : 41
-autonomy : 
+autonomy :
 wheelType : 165/70 R 14
 
 # -------------
 # 3D
 # -------------
-model: 
+model:
 modelWheel:
