--- a/data/cars/_default.yaml
+++ b/data/cars/_default.yaml
@@ -25,7 +25,7 @@ engine :
 # -------------
 gearbox :
   name :
-  ratio : []
+  gearRatio : []
   reverseRatio :
   transferRatio :
   driveRatio :
