--- a/data/cars/citroen_ami.yaml
+++ b/data/cars/citroen_ami.yaml
@@ -18,9 +18,10 @@ engine :
 # -------------
 # TRANSMISSION
 # -------------
-gearRatio : [1]
-driveRatio : 12
-gearSpeed : 8.8
+gearbox:
+  gearRatio : [1]
+  driveRatio : 12
+  gearSpeed : 8.8
 wheelDiameter : 56
 type : FWD
 
