--- a/data/cars/tesla_model3.yaml
+++ b/data/cars/tesla_model3.yaml
@@ -17,9 +17,10 @@ engine :
 # -------------
 # TRANSMISSION
 # -------------
-gearRatio : [1]
-driveRatio : 9
-gearSpeed : 14
+gearbox:
+  gearRatio : [1]
+  driveRatio : 9
+  gearSpeed : 14
 wheelDiameter : 67
 
 # -------------
