--- a/data/cars/chevrolet_suburban_10.yaml
+++ b/data/cars/chevrolet_suburban_10.yaml
@@ -30,17 +30,17 @@ engines :
 # -------------
 # TRANSMISSION
 # -------------
-gearName : Hydra-Matic 6L80
-gearRatio : [4.03, 2.36, 1.53, 1.15, 0.85, 0.67]
-gearReverse : 3.06
-gearTransfer :
-driveRatio : 3.08
-type : AWD
+gearboxes:
+  - name : Hydra-Matic 6L80
+    gearRatio : [4.03, 2.36, 1.53, 1.15, 0.85, 0.67]
+    reverseRatio : 3.06
+    transferRatio :
+    driveRatio : 3.08
 
-gearName: M30
-gearRatio: [3.06, 1.63, 1.00, 0.70]
-driveRatio: 3.73
-gearReverse: 2.29
+  - name: M30
+    gearRatio: [3.06, 1.63, 1.00, 0.70]
+    driveRatio: 3.73
+    reverseRatio: 2.29
 wheelDiameter : 77
 type : AWD
 
