--- a/data/cars/citroen_2cv.yaml
+++ b/data/cars/citroen_2cv.yaml
@@ -18,9 +18,10 @@ engine :
 # -------------
 # TRANSMISSION
 # -------------
-gearRatio : [6.71, 3.24, 1.93, 1.3]
-driveRatio : 3.875
-gearSpeed : 23.4
+gearbox:
+  gearRatio : [6.71, 3.24, 1.93, 1.3]
+  driveRatio : 3.875
+  gearSpeed : 23.4
 wheelDiameter : 63
 
 # -------------
@@ -65,9 +66,10 @@ trims :
       torqueY : [13.3,26  ,28  ,29  ,26.6,25.3] # 29Nm@3500 18BHP@5000
       torqueX : [1000,2000,3000,3500,4000,5000]
       displacement : 425
-    gearRatio : [6.757, 3.257, 1.938, 1.475]
-    gearReverse : 7.3
-    driveRatio : 3.620
+    gearbox:
+      gearRatio : [6.757, 3.257, 1.938, 1.475]
+      reverseRatio : 7.3
+      driveRatio : 3.620
     vmax: 95
     weight : 665 # 560 + 75 + 30
 
@@ -79,9 +81,10 @@ trims :
       torqueY : [13.3,28,24] # 28Nm@4000 23BHP@6750
       torqueX : [1000,4000,6750]
       displacement : 425
-    gearRatio : [5.202,2.656,1.785,1.315]
-    gearReverse : 5.202
-    driveRatio : 4.125
+    gearbox:
+      gearRatio : [5.202,2.656,1.785,1.315]
+      reverseRatio : 5.202
+      driveRatio : 4.125
     weight : 665 # 560 + 75 + 30
     vmax : 102
     avgConsumption : 5.4
@@ -94,9 +97,10 @@ trims :
       torqueY : [13  , 23  ,38  , 37  , 41  , 40  , 37 ] # 41Nm@4000 33@5750
       torqueX : [1000, 2000,2500, 3500, 4000, 5750, 6000]
       displacement : 602
-    gearRatio : [5.202,2.656,1.785,1.315]
-    gearReverse : 5.202
-    driveRatio : 4.125
+    gearbox:
+      gearRatio : [5.202,2.656,1.785,1.315]
+      reverseRatio : 5.202
+      driveRatio : 4.125
     weight : 665 # 560 + 75 + 30
     vmax : 110
     avgConsumption: 6.1
