--- a/data/cars/hyundai_i20.yaml
+++ b/data/cars/hyundai_i20.yaml
@@ -11,9 +11,10 @@ engine : hyundai_petrol_1.2_84
 # -------------
 # TRANSMISSION
 # -------------
-gearRatio : [3.727, 2.056, 1.269, 0.906, 0.719]
-driveRatio : 4.6
-gearSpeed : 35.4
+gearbox:
+  gearRatio : [3.727, 2.056, 1.269, 0.906, 0.719]
+  driveRatio : 4.6
+  gearSpeed : 35.4
 
 # -------------
 # DIMENSIONS
