--- a/data/cars/mazda_2_v3.yaml
+++ b/data/cars/mazda_2_v3.yaml
@@ -19,9 +19,10 @@ engine :
 # -------------
 # TRANSMISSION
 # -------------
-gearRatio : [3.583, 1.904, 1.218, 0.918, 0.717]
-driveRatio : 3.672
-gearSpeed : 45.1
+gearbox:
+  gearRatio : [3.583, 1.904, 1.218, 0.918, 0.717]
+  driveRatio : 3.672
+  gearSpeed : 45.1
 wheelDiameter : 63
 
 # -------------
