--- a/data/cars/renault_truck_t.yaml
+++ b/data/cars/renault_truck_t.yaml
@@ -24,12 +24,10 @@ engines :
 # -------------
 # TRANSMISSION
 # -------------
-gearName : Optidriver 12
-gearRatio : [14.70, 11.70, 9.24, 7.35, 5.81, 4.61, 3.66, 2.91, 2.30, 1.82, 1.44, 1]
-gearReverse :
-gearTransfer :
-driveRatio : 2.64
-gearSpeed :
+gearbox:
+  name : Optidriver 12
+  gearRatio : [14.70, 11.70, 9.24, 7.35, 5.81, 4.61, 3.66, 2.91, 2.30, 1.82, 1.44, 1]
+  driveRatio : 2.64
 wheelDiameter : 101
 type : #AWD, RWD, FWD
 
