--- a/data/cars/volkswagen_kombi.yaml
+++ b/data/cars/volkswagen_kombi.yaml
@@ -18,11 +18,11 @@ engine :
 # -------------
 # TRANSMISSION
 # -------------
-gearName :
-gearRatio : [3.80,2.06,1.26,0.82]
-gearReverse : 3.61
-driveRatio : 5.375
-gearSpeed : 29.1
+gearbox:
+  gearRatio : [3.80,2.06,1.26,0.82]
+  gearReverse : 3.61
+  driveRatio : 5.375
+  gearSpeed : 29.1
 wheelDiameter : 68
 type : RWD
 
