--- a/data/cars/citroen_c15d.yaml
+++ b/data/cars/citroen_c15d.yaml
@@ -23,10 +23,10 @@ engine :
 # -------------
 gearbox :
   name : BE3/5 20TE11
-  gearRatio : [3.727, 2.158, 1.407, 1.029, 0.767]
+  gearRatio : [3.25, 1.85, 1.360, 1.069, 0.810]
   reverseRatio : 3.583
   transferRatio :
-  driveRatio : 3.867
+  driveRatio : 3.94
 wheelDiameter : 53
 type : FWD
 
@@ -49,9 +49,11 @@ configs :
       layout : l4
       displacement : 1124
     weight: 865
+    year: 1984-1990
     gearbox :
-      gearRatio : [3.727, 2.217, 1.469, 1.029]
-      reverseRatio: 3.818
+      name: 20CB38
+      gearRatio : [3.41, 1.81, 1.129, 0.814]
+      reverseRatio: 3.583
       driveRatio: 4.063
 
 # -------------
