Complete gearbox if needed

--- a/data/cars/citroen_c15d.yaml
+++ b/data/cars/citroen_c15d.yaml
@@ -41,6 +41,8 @@ configs :
       type : diesel
       layout : l4
       displacement : 1769
+    #gearbox :
+    #  name : 20TB09
   - engine :
       name : TU1
       hp: 55
