--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gh-pages": "^5.0.0",
     "globals": "^15.0.0",
     "jest": "^29.5.0",
+    "mdsvex": "^0.11.2",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "sass": "^1.62.0",
