--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@types/eslint": "^8.56.7",
     "@types/jest": "^29.5.0",
     "@types/three": "^0.150.1",
+    "dompurify": "^3.1.6",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "gh-pages": "^5.0.0",
     "globals": "^15.0.0",
+    "gray-matter": "^4.0.3",
     "jest": "^29.5.0",
-    "mdsvex": "^0.11.2",
+    "marked": "^13.0.3",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "sass": "^1.62.0",
