--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "fuse.js": "^6.6.2",
+    "gl-matrix": "^3.4.3",
     "lodash.get": "^4.4.2",
     "nes.css": "^2.3.0",
     "pts": "^0.10.12",
