Add cybertruck model

--- a/data/cars/tesla_cybertruck.yaml
+++ b/data/cars/tesla_cybertruck.yaml
@@ -83,9 +83,9 @@ wheelType: 285/65R20
 # -------------
 # 3D
 # -------------
-model:
-modelWheel:
-modelMisc:
+model: cybertruck
+modelWheel: wheelCybertruck
+modelMisc: Panel
 wheelScale:
 modelLights :
 
